samples/_failures_safe/1761454236_fb2a86_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92b306f9.c:182: error: expected ‘;’, ‘,’ or ‘)’ at end of input
